tests/compile_errors/match-overlapping-folded-range.buzz
// Overlapping `match` condition
test "match overlapping folded range condition" {
    _ = match (4) {
        1..(2 + 3) -> "folded",
        4..8 -> "range",
        else -> "other",
    };
}
